--- a/WebGLPGuide/index.html
+++ b/WebGLPGuide/index.html
@@ -19,6 +19,7 @@
     <!-- <script src="HelloMatrix.js"></script> -->
     <!-- <script src="HelloMatrix4.js"></script> -->
     <!-- <script src="HelloAnimation.js"></script> -->
-    <script src="HelloTexture.js"></script>
+    <!-- <script src="HelloTexture.js"></script> -->
+    <script src="FlipTest.js"></script>
 </body>
 </html>
