--- a/WebGLPGuide/index.html
+++ b/WebGLPGuide/index.html
@@ -10,6 +10,7 @@
     <canvas id="webgl" width="400" height="400">
         Please use a browser that supports "canvas"
     </canvas>
+    <p id="htmlLog">html log displayed here.</p>
     <script src="./lib/webgl-utils.js"></script>
     <script src="./lib/webgl-debug.js"></script>
     <script src="./lib/cuon-utils.js"></script>
@@ -19,6 +20,9 @@
     <!-- <script src="HelloMatrix.js"></script> -->
     <!-- <script src="HelloMatrix4.js"></script> -->
     <!-- <script src="HelloAnimation.js"></script> -->
-    <script src="HelloTexture.js"></script>
+    <!-- <script src="HelloTexture.js"></script> -->
+    <!-- <script src="LookAtTriangle.js"></script> -->
+    <!-- <script src="OrthoView.js"></script> -->
+    <script src="PerspectiveView.js"></script>
 </body>
 </html>
