--- a/Three/index.html
+++ b/Three/index.html
@@ -13,6 +13,14 @@
             height: 600px;
             background-color: #EEEEEE;
         }
+        #info {
+            position:absolute;
+            top: 10px;
+            width: 100%;
+            text-align: center;
+            z-index: 100;
+            display: block;
+        }
     </style>
     <script src="./src/lib/three.js"></script>
     
@@ -24,6 +32,10 @@
     </canvas>
     <p id="htmlLog">html log displayed here.</p> -->
     <div id="canvas-frame"></div>
-    <script src="src/main.js"></script>
+    <div id="info">Description</div>
+    <!-- <script src="src/main.js"></script> -->
+    <!-- <script src="src/main_move.js"></script> -->
+    <!-- <script src="src/CreatingScene.js"></script> -->
+    <script src="src/DrawingLines.js"></script>
 </body>
 </html>
