--- a/WebGLPGuide/index.html
+++ b/WebGLPGuide/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body onload="main()">
-    <canvas id="webgl" width="400" height="400">
+    <canvas id="webgl" width="800" height="800">
         Please use a browser that supports "canvas"
     </canvas>
     <p id="htmlLog">html log displayed here.</p>
@@ -24,6 +24,8 @@
     <!-- <script src="LookAtTriangle.js"></script> -->
     <!-- <script src="OrthoView.js"></script> -->
     <!-- <script src="FlipTest.js"></script> -->
-    <script src="PerspectiveView.js"></script>
+    <!-- <script src="PerspectiveView.js"></script> -->
+    <!-- <script src="PerspectiveView_mvpMatrix.js"></script> -->
+    <script src="ZFighting.js"></script>
 </body>
 </html>
