PGuide hello cube

--- a/WebGLPGuide/index.html
+++ b/WebGLPGuide/index.html
@@ -26,6 +26,7 @@
     <!-- <script src="FlipTest.js"></script> -->
     <!-- <script src="PerspectiveView.js"></script> -->
     <!-- <script src="PerspectiveView_mvpMatrix.js"></script> -->
-    <script src="ZFighting.js"></script>
+    <!-- <script src="ZFighting.js"></script> -->
+    <script src="HelloCube.js"></script>
 </body>
 </html>
