--- a/WebGLPGuide/index.html
+++ b/WebGLPGuide/index.html
@@ -27,6 +27,8 @@
     <!-- <script src="PerspectiveView.js"></script> -->
     <!-- <script src="PerspectiveView_mvpMatrix.js"></script> -->
     <!-- <script src="ZFighting.js"></script> -->
-    <script src="HelloCube.js"></script>
+    <!-- <script src="HelloCube.js"></script> -->
+    <!-- <script src="ColoredCube.js"></script> -->
+    <script src="ColoredCube_singleColor.js"></script>
 </body>
 </html>
