--- a/WebGLPGuide/index.html
+++ b/WebGLPGuide/index.html
@@ -29,6 +29,12 @@
     <!-- <script src="ZFighting.js"></script> -->
     <!-- <script src="HelloCube.js"></script> -->
     <!-- <script src="ColoredCube.js"></script> -->
-    <script src="ColoredCube_singleColor.js"></script>
+    <!-- <script src="ColoredCube_singleColor.js"></script> -->
+    <!-- <script src="LightedCube.js"></script> -->
+    <!-- <script src="LightedCube_ambient.js"></script> -->
+    <!-- <script src="PointLightedCube.js"></script> -->
+    <script src="PointLightedCube_perFragment.js"></script>
+    <!-- <script src="PointLightedSphere.js"></script> -->
+    <!-- <script src="PointLightedSphere_perFragment.js"></script> -->
 </body>
 </html>
