--- a/WebGLPGuide/index.html
+++ b/WebGLPGuide/index.html
@@ -33,8 +33,9 @@
     <!-- <script src="LightedCube.js"></script> -->
     <!-- <script src="LightedCube_ambient.js"></script> -->
     <!-- <script src="PointLightedCube.js"></script> -->
-    <script src="PointLightedCube_perFragment.js"></script>
+    <!-- <script src="PointLightedCube_perFragment.js"></script> -->
     <!-- <script src="PointLightedSphere.js"></script> -->
     <!-- <script src="PointLightedSphere_perFragment.js"></script> -->
+    <script src="JointModel.js"></script>
 </body>
 </html>
