--- a/WebGLPGuide/index.html
+++ b/WebGLPGuide/index.html
@@ -36,6 +36,7 @@
     <!-- <script src="PointLightedCube_perFragment.js"></script> -->
     <!-- <script src="PointLightedSphere.js"></script> -->
     <!-- <script src="PointLightedSphere_perFragment.js"></script> -->
-    <script src="JointModel.js"></script>
+    <!-- <script src="JointModel.js"></script> -->
+    <script src="MultiJointModel.js"></script>
 </body>
 </html>
