--- a/WebGLPGuide/index.html
+++ b/WebGLPGuide/index.html
@@ -43,6 +43,7 @@
     <!-- <script src="PickObject.js"></script> -->
     <!-- <script src="3DoverWeb.js"></script> -->
     <!-- <script src="Fog.js"></script> -->
-    <script src="Fog_w.js"></script>
+    <!-- <script src="Fog_w.js"></script> -->
+    <script src="RoundedPoint.js"></script>
 </body>
 </html>
