PGuide blend multishaderprogram

--- a/WebGLPGuide/index.html
+++ b/WebGLPGuide/index.html
@@ -45,6 +45,9 @@
     <!-- <script src="3DoverWeb.js"></script> -->
     <!-- <script src="Fog.js"></script> -->
     <!-- <script src="Fog_w.js"></script> -->
-    <script src="RoundedPoint.js"></script>
+    <!-- <script src="RoundedPoint.js"></script> -->
+    <!-- <script src="LookAtBlenderTriangles.js"></script> -->
+    <!-- <script src="BlendedCube.js"></script> -->
+    <script src="ProgramObject.js"></script>
 </body>
 </html>
