--- a/WebGLPGuide/index.html
+++ b/WebGLPGuide/index.html
@@ -48,6 +48,7 @@
     <!-- <script src="RoundedPoint.js"></script> -->
     <!-- <script src="LookAtBlenderTriangles.js"></script> -->
     <!-- <script src="BlendedCube.js"></script> -->
-    <script src="ProgramObject.js"></script>
+    <!-- <script src="ProgramObject.js"></script> -->
+    <script src="FramebufferObject.js"></script>
 </body>
 </html>
