--- a/WebGLPGuide/index.html
+++ b/WebGLPGuide/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body onload="main()">
-    <canvas id="webgl" width="800" height="800" style="position:absolute; z-index: 1;">
+    <canvas id="webgl" width="2048" height="2048" style="position:absolute; z-index: 1;">
         Please use a browser that supports "canvas"
     </canvas>
     <p id="htmlLog">html log displayed here.</p>
@@ -49,6 +49,7 @@
     <!-- <script src="LookAtBlenderTriangles.js"></script> -->
     <!-- <script src="BlendedCube.js"></script> -->
     <!-- <script src="ProgramObject.js"></script> -->
-    <script src="FramebufferObject.js"></script>
+    <!-- <script src="FramebufferObject.js"></script> -->
+    <script src="Shadow.js"></script>
 </body>
 </html>
