--- a/Three/index.html
+++ b/Three/index.html
@@ -36,6 +36,7 @@
     <!-- <script src="src/main.js"></script> -->
     <!-- <script src="src/main_move.js"></script> -->
     <!-- <script src="src/CreatingScene.js"></script> -->
-    <script src="src/DrawingLines.js"></script>
+    <!-- <script src="src/DrawingLines.js"></script> -->
+    <script src="src/Lights.js"></script>
 </body>
 </html>
