--- a/Mo/test/TestIndex.html
+++ b/Mo/test/TestIndex.html
@@ -9,6 +9,8 @@
 <!-- <script src="../math/Vector2.js" type="module"></script> -->
 <script src="./TestMath.js" type="module"></script>
 <body onload="main()">
-    
+    <canvas id='webgl' width="500" height="500" style="position:absolute">
+        您的浏览器不支持Canvas，请换个浏览器。
+    </canvas>
 </body>
 </html>
